# message-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/core/: config.py  logging.py  security.py
app/ml/: labels.py  pipeline.py  predictor.py  preprocessing.py
scripts/: build_dataset.py  download_data.py  evaluate.py  train.py
tests/: conftest.py  test_api.py  test_build_dataset.py  test_pipeline.py  test_predictor.py  test_preprocessing.py  test_train.py
