[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message-classifier"
version = "0.1.0"
description = "Intelligent Messaging Safety & Priority Classifier (FastAPI + scikit-learn)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Message Classifier Team" }
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "scikit-learn>=1.5,<2.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "nltk>=3.9,<4.0",
    "joblib>=1.4,<2.0",
    "python-multipart>=0.0.9",
    "requests>=2.32,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "matplotlib>=3.8,<4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
